@@ -2,14 +2,13 @@ package com.Optimart.services.Order;
 
 import com.Optimart.constants.MessageKeys;
 import com.Optimart.dto.Order.CreateOrderDTO;
-import com.Optimart.dto.OrderItem.OrderItemsDTO;
 import com.Optimart.exceptions.DataNotFoundException;
 import com.Optimart.models.*;
 import com.Optimart.repositories.*;
-import com.Optimart.repositories.Specification.ProductSpecification;
+import com.Optimart.repositories.Specification.OrderSpecification;
 import com.Optimart.responses.APIResponse;
+import com.Optimart.responses.Order.OrderResponse;
 import com.Optimart.responses.PagingResponse;
-import com.Optimart.responses.Product.ProductResponse;
 import com.Optimart.utils.JwtTokenUtil;
 import com.Optimart.utils.LocalizationUtils;
 import lombok.RequiredArgsConstructor;
@@ -21,7 +20,6 @@ import org.springframework.data.domain.Sort;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
-import org.springframework.web.bind.annotation.RequestHeader;
 
 import java.util.List;
 import java.util.Map;
@@ -38,34 +36,58 @@ public class OrderService implements IOrderService{
     private final DeliveryTypeRepository deliveryTypeRepository;
     private final UserRepository userRepository;
     private final AuthRepository authRepository;
+    private final ShippingAddressRepository shippingAddressRepository;
+    private final OrderItemRepository orderItemRepository;
     private final JwtTokenUtil jwtTokenUtil;
     private final LocalizationUtils localizationUtils;
     @Override
-    public APIResponse<Order> createOrder(CreateOrderDTO createOrderDTO) {
+    public APIResponse<OrderResponse> createOrder(CreateOrderDTO createOrderDTO) {
         Order order = modelMapper.map(createOrderDTO, Order.class);
         User user = userRepository.findById(UUID.fromString(createOrderDTO.getUserId())).get();
         order.setUser(user);
+        ShippingAddress shippingAddress = modelMapper.map(createOrderDTO, ShippingAddress.class);
+        shippingAddressRepository.save(shippingAddress);
+        Paymenttype paymenttype = paymentTypeRepository.findById(UUID.fromString(createOrderDTO.getPaymentMethod())).get();
+        DeliveryType deliveryType = deliveryTypeRepository.findById(UUID.fromString(createOrderDTO.getDeliveryMethod())).get();
+        order.setShippingAddress(shippingAddress);
+        order.setPaymentMethod(paymenttype);
+        order.setDeliveryMethod(deliveryType);
+        order.setOrderStatus(1);
+        order.setUser(user);
+        order = orderRepository.save(order);
+        Order finalOrder = order;
         List<OrderItem> orderItems = createOrderDTO.getOrderItems().stream()
                 .map(item -> {
                     OrderItem orderItem = modelMapper.map(item, OrderItem.class);
+                    orderItem.setOrder(finalOrder);
                     return orderItem;
-                }).toList();
+                }).collect(Collectors.toList());
+        orderItemRepository.saveAll(orderItems);
         order.setOrderItemList(orderItems);
-        Paymenttype paymenttype = paymentTypeRepository.findById(UUID.fromString(createOrderDTO.getPaymentMethod())).get();
-        DeliveryType deliveryType = deliveryTypeRepository.findById(UUID.fromString(createOrderDTO.getDeliveryMethod())).get();
-        order.setPaymentMethod(paymenttype);
-        order.setDeliveryMethod(deliveryType);
-//        user.getOrderList().add(order);
-        order.setUser(user);
         orderRepository.save(order);
-        return new APIResponse<>(order, localizationUtils.getLocalizedMessage(MessageKeys.ORDER_CREATE_SUCCESS));
+        List<Order> orders = user.getOrderList();
+        orders.add(order);
+        user.setOrderList(orders);
+        userRepository.save(user);
+        return new APIResponse<>(new OrderResponse(order.getId()), localizationUtils.getLocalizedMessage(MessageKeys.ORDER_CREATE_SUCCESS));
     }
 
     @Override
     public PagingResponse<List<Order>> getAllOrderByMe(Map<Object, String> filters, String token) {
         User user = getUser(token);
         List<Order> orderList = user.getOrderList();
-        return null;
+        int page = Integer.parseInt(filters.getOrDefault("page", "-1"));
+        int limit = Integer.parseInt(filters.getOrDefault("limit", "-1"));
+        String order = filters.get("order");
+        if (page == -1 && limit == -1 ) {
+            return new PagingResponse<>(orderList, localizationUtils.getLocalizedMessage(MessageKeys.ORDER_LIST_GET_SUCCESS), 1, (long) orderList.size());
+        }
+        page = Math.max(Integer.parseInt(filters.getOrDefault("page", "-1")), 1) - 1;
+        Pageable pageable = PageRequest.of(page, limit, Sort.by("createdAt").descending());
+        pageable = getPageable(pageable, page, limit, order);
+        Specification<Order> specification = OrderSpecification.filterOrderByUser(filters.get("status"), user.getId());
+        Page<Order> orderPage = orderRepository.findAll(specification, pageable);
+        return new PagingResponse<>(orderPage.getContent(), localizationUtils.getLocalizedMessage(MessageKeys.ORDER_LIST_GET_SUCCESS), orderPage.getTotalPages(), orderPage.getTotalElements());
     }
 
     private Pageable getPageable(Pageable pageable, int page, int limit, String order) {
@@ -86,16 +108,13 @@ public class OrderService implements IOrderService{
         String order = filters.get("order");
         if (page == -1 && limit == -1 ) {
             List<Order> orderList = orderRepository.findAll();
-//            List<Order> productResponseList = orderList.stream()
-//                    .map(product -> modelMapper.map(product, ProductResponse.class))
-//                    .toList();
             return new PagingResponse<>(orderList, localizationUtils.getLocalizedMessage(MessageKeys.ORDER_LIST_GET_SUCCESS), 1, (long) orderList.size());
         }
         page = Math.max(Integer.parseInt(filters.getOrDefault("page", "-1")), 1) - 1;
         Pageable pageable = PageRequest.of(page, limit, Sort.by("createdAt").descending());
         pageable = getPageable(pageable, page, limit, order);
         Page<Order> orderPage = orderRepository.findAll(pageable);
-//        Specification<Product> specification = ProductSpecification.filterProducts(filters.get("productType"), filters.get("status"), filters.get("search"));;
+//        Specification<Product> specification = ProductSpecification.filterProducts(filters.get("productType"), filters.get("status"), filters.get("search"));
         return new PagingResponse<>(orderPage.getContent(), localizationUtils.getLocalizedMessage(MessageKeys.ORDER_LIST_GET_SUCCESS), orderPage.getTotalPages(), orderPage.getTotalElements());
     }
 
